--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
             
             <div class ="side_button">
-                <img src="../images/Side_bar_Icon3.png" onclick="cmd_open()"> 
+                <img src="Images/Side_bar_Icon3.png" onclick="cmd_open()"> 
             </div> 
             <div class="mySidebar SideBar_animation" style="display:none;" id="mySidebar">
                 <a onclick="cmd_close()">Exit</a>
@@ -64,7 +64,7 @@
 
             <aside>
                 <div class="image_container">
-                <img class="Images" src="../images/Food9.JPG">
+                <img class="Images" src="Images/Food9.JPG">
                 </div>
             </aside>
         
