--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <aside>
                 <div class="image_container">
-                <img class="Images" src="Images/Food9.JPG">
+                <img class="Images" src="Images/Food9.jpg">
                 </div>
             </aside>
         
