--- a/recipe.html
+++ b/recipe.html
@@ -6,7 +6,7 @@
 
     <meta name="Foods" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
 
